<resources>
    <string name="app_name">Orchidarium</string>

    <!-- Menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_make_order">Order</string>
    <string name="action_add_new">Add new</string>
    <string name="action_save_orchid">Save</string>
    <string name="action_delete_orchid">Delete</string>

    <!-- Filer modes in MainActivity -->
    <string name="pref_mode_all">All</string>
    <string name="pref_mode_my_cart_only">My cart only</string>
    <string name="pref_mode_default">All</string>

    <!-- Preferences -->
    <string name="sort_first_new">first new</string>
    <string name="sort_new_at_the_end">new at the end</string>
    <string name="sort_ascending_price">ascending price</string>
    <string name="sort_descending_price">descending price</string>

    <string name="pref_key_currency_symbol" translatable="false">pref_key_currency_symbol</string>


    <string name="label_notify_me">Notify me of new orchids</string>
    <string name="pref_key_notify_me" translatable="false">pref_key_notify_me</string>

    <string name="pref_key_mode" translatable="false">pref_key_mode</string>
    <string name="pref_sum_notification_is_on">Notification is on</string>
    <string name="pref_sum_notification_is_off">Notification is off</string>

    <!-- DetailActivity -->
    <string name="label_nice_image">The nice image</string>
    <string name="label_real_image">The real image</string>
    <!-- Button which load a nice image. [CHAR LIMIT=30] -->
    <string name="btn_add_change_nice_photo">Add/Change nice photo</string>
    <!-- Button which load real images. [CHAR LIMIT=30] -->
    <string name="btn_add_change_real_photo">Add/Change real photo</string>

    <!-- Mocks -->
    <string name="mock_detail_title" translatable="false">Phragmipedium besseae</string>
    <string name="mock_description" translatable="false">Phragmipedium besseae is a warm growing litophyte/terrestrial species come from the wet montane forests on the eastern slopes of the Colombian, Ecuadorian and Peruvian Andes where it grows at altitudes of 100 to 1500 meters.</string>

    <string name="label_appearance">Put up for sale</string> 
    <string name="label_hidden">Hidden</string>
    <string name="label_available_for_order">Available</string>
    <string name="label_name">Name</string>
    <string name="hint_id">Code/#</string>
    <string name="label_description">Description</string>
    <string name="label_plant_age">Plant Age</string>
    <string name="label_pot_size">Pot Size</string>
    <string name="label_retail_price">Retail price</string>

    <string name="pot_size_1_7" translatable="false">1,7"</string>
    <string name="pot_size_2_5" translatable="false">2,5"</string>
    <string name="pot_size_3_5" translatable="false">3,5"</string>

    <string name="plant_age_two_years_before">2–3 years before flowering</string>     
    <string name="plant_age_one_years_before">1 year before flowering</string>     
    <string name="plant_age_flowering">flowering age</string>     
    <string name="plant_age_blooming">blooming</string>
    <string name="title_new_orchid">New orchid</string>
    <string name="title_edit_orchid">Change data</string>
    <string name="msg_delete_dialog">Delete orchid?</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_unsaved_changes_dialog">Discard your changes and quit editing?</string>
    <string name="btn_discard">Discard</string>
    <string name="btn_keep_editing">Keep editing</string>
    <string name="desc_nice_orchid_photo">The photo of a blooming orchid</string>
    <string name="desc_real_orchid_photo">The real orchid photo</string>
    <string name="desc_selected_for_purchase">Selected for purchase</string>

    <string name="msg_no_connection_error">Please check your Internet connection.</string>
    <string name="msg_error_getting_data">Error getting data.</string>

    <string name="sign_usd" translatable="false">\u0024</string>
    <string name="sign_eur" translatable="false">\u20AC</string>
    <string name="sign_rur" translatable="false">\u20BD</string>

    <string name="empty" translatable="false">""</string>
    <string name="action_sign_out">Sign out</string>
    <string name="msg_choose_image">Choose the image</string>
    <string name="action_delete_photo">Delete</string>
    <string name="title_activity_photo_gallery">Photo Gallery</string>
    <!--string name="section_format">Hello World from section: %1$d</string-->

    <string name="transition_real_photo" translatable="false">transition_real_photo</string>
    <string name="transition_nice_photo" translatable="false">transition_nice_photo</string>

    <string name="search_hint">Search by name</string>
    <string name="app_label" translatable="false">app_label</string>
    <string name="action_show_hidden">Show hidden only</string>
    <string name="invisible_to_buyers">Invisible to buyers</string>
    <string name="title_invisible_to_customers">Only invisible to customers</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="make_an_order_by_email">Make an order by email</string>
    <string name="order_subject">Orchdarium purchase order</string>
    <string name="order_address">order.orchidarium@gmail.com</string>
    <string name="order_mail_body">Dear florists,\n\n
                I would like to order orchids according to the following list:</string>

</resources>