<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sp_filter"
        android:background="@color/gray100"
        android:title=""
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_make_order"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="@string/action_make_order"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_new"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_add_new"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>