<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_nice_photo"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/desc_nice_orchid_photo"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_nice_photo"
            tools:src="@drawable/phragmipedium_besseae_nice" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:background="@drawable/scrim_top_left" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/fui_transparent"
            android:padding="2dp"
            android:textColor="@color/yellow500"
            tools:text="$29.98" />

        <ImageView
            android:id="@+id/iv_in_cart"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="top|end"
            android:layout_margin="8dp"
            android:contentDescription="@string/desc_selected_for_purchase"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_shopping_cart_yellow_24dp"
            android:visibility="invisible" />


    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/lightGreen900">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/white"
            tools:text="Phragmipedium besseae" />

        <TextView
            android:id="@+id/tv_for_sale_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textColor="@color/gray100"
            android:visibility="gone"
            tools:text="1 day" />

    </RelativeLayout>
</LinearLayout>